# Home-Assistant-MQTT-Voice-Assistant

./: .clangd  .gitignore  AGENTS.md  BUILD_INSTRUCTIONS.txt  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GETTING_STARTED.md  MQTT_INTEGRATION.md  README.md  SUMMARY.md  TECHNICAL_SPECIFICATIONS.md  TODO_OLED_STATUS_DISPLAY.md  WAKENET_SD_CARD_SETUP.md  build.bat  build.py  flash.bat  flash.py  kill_monitor.bat  ota_server.bat  partitions.csv  quick_build.bat  quick_flash.bat  sdkconfig  sdkconfig.defaults
.github/ISSUE_TEMPLATE/: bug_report.md
common_components/bsp_extra/include/: bsp_board_extra.h
common_components/bsp_extra/src/: bsp_board_extra.c
common_components/espressif__esp32_p4_function_ev_board/: esp32_p4_function_ev_board.c
docs/: TECHNICAL_SPECIFICATIONS.md  WAKENET_SD_CARD_SETUP.md
help_scripts/: ha_mcp_server.py  home_assistant_mcp.md
main/: CMakeLists.txt  Kconfig.projbuild  agc.c  agc.h  audio_capture.c  audio_capture.h  beep_tone.c  beep_tone.h  camera_manager.c  camera_manager.h  config.h.example  connection_manager.c  connection_manager.h  ha_client.c  ha_client.h  idf_component.yml  led_status.c  led_status.h  local_music_player.c  main.c  mp3_player.c  mqtt_ha.c  mqtt_ha.h  network_manager.c  oled_status.c  ota_update.c  ota_update.h  settings_manager.c  settings_manager.h  sys_diag.c  timer_manager.c  timer_manager.h  tts_player.c  tts_player.h  va_control.c  va_control.h  voice_pipeline.c  wake_prompt.c  wake_prompt.h  webserial.c  (+4 more)
tools/: kill_monitor.ps1
(+1 files in other folders)
